# kwik-med-emr-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  NEXT.md  README.md  alembic.ini  api_test_report.json  feedback.md  healthcare_agent.py  init_db.py  pyproject.toml  rag_helper.py  realtime_whisper_agent.py  recreate_db.py  sample_patient_timeline.json  setup_rag.py  simple_rag.py  test_api.py  test_api_consultations.py  test_complete_consultation_flow.py  test_consultation_validation.py  test_consultations.py  test_frontend_connectivity.py  test_healthcare_rag.py  test_patient_timeline.py  test_pindo_api.py
.github/workflows/: deployment.yml
alembic/: env.py
alembic/versions/: 3fb71f142905_add_language_field_to_recordings_table.py  5f66552e170e_fix_recording_enum_case_and_add_missing_.py  77ee6c6bb633_add_insurance_and_national_id_fields_to_.py  8d3ffec07429_add_insurance_coverage_percentage_to_.py  cc8429e20a7d_remove_chief_complaint_column_from_.py  e5deb8179384_add_metadata_field_to_recordings_for_.py  fc9ceb4277d8_add_new_recording_status_enum_values.py
app/: main.py
app/api/: __init__.py
app/core/: config.py
app/db/: database.py
app/models/: __init__.py  analysis.py  patient.py  practitioner.py  recording.py  session.py
app/repositories/: __init__.py  analysis_repository.py  base.py  patient_repository.py  practitioner_repository.py  recording_repository.py  session_repository.py
app/schemas/: analysis.py  eligibility.py  patient.py  practitioner.py  recording.py  session.py
app/services/: analysis_crud_service.py  (+11 more)
(+8 files in other folders)
